# puls-events

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py  schemas.py
data/: chunks_drome.json  evaluation_results.json  events_drome.csv  events_drome.json  ragas_results.json  test_dataset.json
docs/: rapport_technique_puls_events.docx
faiss_index/: index.faiss  index.pkl
notes/: notes.md  rag_system.md  test_search.md
scripts/: evaluate_manual.py  evaluate_rag.py  test_search.py
src/: build_index.py  chunking.py  ingestion.py  llm.py  rag_system.py  vectorstore.py
tests/: test_api.py  test_chunking.py  test_imports.py  test_ingestion.py  test_llm.py  test_rag_system.py  test_vectorstore.py
