[project]
name = "puls-events"
version = "0.1.0"
description = "Plateforme de recommandations culturelles locales et personnalisées"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.1.1",
    "mistralai>=1.12.4",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]